--- a/ecom/store_manager/templates/add_variant.html
+++ b/ecom/store_manager/templates/add_variant.html
@@ -76,7 +76,7 @@
         {{ variant_form.as_p }}
 
            
-        <button type="submit">Save</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
     <a href="{% url 'variant_list' %}">Back to Variants</a>
 
