--- a/ecom/store_manager/templates/variant_list.html
+++ b/ecom/store_manager/templates/variant_list.html
@@ -176,6 +176,9 @@
 </table>
 
 
+<a href="{% url 'add_variant' %}">Create Variant</a>
+
+
 {% else %}
 <p>You are not authorized to view this form.</p>
 {% endif %}
