--- a/ecom/store/templates/login.html
+++ b/ecom/store/templates/login.html
@@ -61,7 +61,7 @@
 
         <div class="mb-3">
           <label class="form-label">Password</label>
-          <input class="form-control" type="password" name="password" placeholder="Enter password">
+          <input class="form-control" type="password" name="password" placeholder="Enter password"  aria-label="Password">
         </div>
 
         <button class="btn btn-primary" style="width:100%">Login to your account</button>
