--- a/ecom/store/templates/manage_address_profile.html
+++ b/ecom/store/templates/manage_address_profile.html
@@ -4,6 +4,22 @@
 
 {% block content %}
 
+
+
+
+
+<style>
+    .error {
+        color: red;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .error-list {
+        list-style-type: none;
+        padding: 0;
+    }
+</style>
+
 <!-- Header-->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
@@ -24,7 +40,7 @@
             <form method="POST" action="">
                 {% csrf_token %}
                  <!-- Address Line 1 -->
-                <div class="mb-3">
+                {% comment %} <div class="mb-3">
                     <label for="address_line_1" class="form-label">Address Line 1</label>
                     <input type="text" id="address_line_1" name="address_line_1" 
                         value="{{ address.address_line_1|default:'' }}" class="form-control" required>
@@ -51,7 +67,26 @@
                 <div class="mb-3">
                     <label for="country" class="form-label">Country</label>
                     <input type="text" id="country" name="country" value="{{ address.country|default:'' }}" class="form-control" required>
+                </div> {% endcomment %}
+
+
+                {% comment %} error show {% endcomment %}
+               
+                {% for field in form %}
+                <div class="mb-3">
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                    {{ field }}
+                    
+                    {% if field.errors %}
+                        <div class="error-list">
+                            {% for error in field.errors %}
+                                <div class="error">{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
+                {% endfor %}
+                
                 <button type="submit" class="btn btn-primary" style="width: 250px; height: 50px;">{% if address %}Update{% else %}Add{% endif %} Address</button>
             </form>
         </div>
