--- a/ecom/store/templates/order_list.html
+++ b/ecom/store/templates/order_list.html
@@ -23,6 +23,7 @@
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <div>
                             <h6 class="mb-0">Order #{{ order.id}}</h6>
+                            <h6 class="mb-0">Order #{{ order.created_at}}</h6>
                             <small class="text-muted">Status: <strong>{{ order.status }}</strong></small>
                         </div>
                         <div class="text-end">
